--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:miniatmega328]
 platform = atmelavr
-board = miniatmega328
+board = pro8MHzatmega328
 framework = arduino
 lib_deps =
   # Using a library name
