Migration sous VSCode

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
+.vscode
 .pio
 .pioenvs
 .piolibdeps
 .clang_complete
 .gcc-flags.json
 .travis.yml
-/lib/PersonalData/
-/lib/AT24C32_TEST/Examples/
-/test/
-.DS_Store
