--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "h:/Nextcloud/Documents/Electronique/VSCode Projects/RADOM-WL-thermometre/.pio/build/miniatmega328/firmware.elf",
+            "executable": "C:/Users/jbsap/Nextcloud/Documents/Electronique/VSCode Projects/RADOM-WL-thermometre/.pio/build/miniatmega328/firmware.elf",
             "toolchainBinDir": "C:/Users/jbsap/.platformio/packages/toolchain-atmelavr/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -24,7 +24,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "h:/Nextcloud/Documents/Electronique/VSCode Projects/RADOM-WL-thermometre/.pio/build/miniatmega328/firmware.elf",
+            "executable": "C:/Users/jbsap/Nextcloud/Documents/Electronique/VSCode Projects/RADOM-WL-thermometre/.pio/build/miniatmega328/firmware.elf",
             "toolchainBinDir": "C:/Users/jbsap/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
