--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.vscode
 .pio
 .pioenvs
 .piolibdeps
 .clang_complete
 .gcc-flags.json
 .travis.yml
+.vscode/
 /lib/PersonalData/
 /lib/AT24C32_TEST/Examples/
 /test/
