--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-.vscode
-.pio
-.pioenvs
-.piolibdeps
-.clang_complete
-.gcc-flags.json
-.travis.yml
-/lib/PersonalData/
-/lib/AT24C32_TEST/Examples/
-/test/
+.pio/
+.vscode/
 .DS_Store
-.json
+
