--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,25 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
+
 # Orchestrate or schedule a set of jobs
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+
+  jobs:
+    build-arduino-default:
+      machine: true
+      steps:
+        - checkout
+        - run:
+            name: Make scripts executable 
+            command: sudo chmod -R +x ./.circleci/*.sh
+        - run:
+            name: Install
+            command: ./.circleci/install_arduino.sh
+        - run:
+            name: Build
+            command: ./.circleci/script_arduino.sh
+
+  workflows:
+    build:
+      jobs:
+        - build-arduino-default
