--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,26 @@
-dependencies:
-  pre:
-    # Install the latest stable PlatformIO
-    - sudo pip install -U platformio
+# dependencies:
+#   pre:
+#     # Install the latest stable PlatformIO
+#     - sudo pip install -U platformio
 
-    # download dependent libraries
-    - platformio lib -g install 1 # OneWire
-    - platformio lib -g install 251 # VirtualWire
-    - platformio lib -g install 38 # LowPower
+#     # download dependent libraries
+#     - platformio lib -g install 1 # OneWire
+#     - platformio lib -g install 251 # VirtualWire
+#     - platformio lib -g install 38 # LowPower
 
-test:
-  override:
-      - platformio ci src/thermo.cpp --board=pro8MHzatmega328
+# test:
+#   override:
+#       - platformio ci src/thermo.cpp --board=pro8MHzatmega328
+
+
+version: 2
+jobs:
+  build:
+    docker:
+      - image: suculent/platformio-docker-build
+    steps:
+      - checkout
+      - platformio lib -g install 1 # OneWire
+      - platformio lib -g install 251 # VirtualWire
+      - platformio lib -g install 38 # LowPower
+      - run: platformio ci src/main.cpp --board=esp32doit-devkit-v1
