--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - image: suculent/platformio-docker-build
     steps:
       - checkout
-      - platformio lib -g install 1 # OneWire
-      - platformio lib -g install 251 # VirtualWire
-      - platformio lib -g install 38 # LowPower
+      - run: platformio lib -g install 1 # OneWire
+      - run: platformio lib -g install 251 # VirtualWire
+      - run: platformio lib -g install 38 # LowPower
       - run: platformio ci src/main.cpp --board=esp32doit-devkit-v1
