--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
       - run: platformio lib -g install 1 # OneWire
       - run: platformio lib -g install 251 # VirtualWire
       - run: platformio lib -g install 38 # LowPower
-      - run: platformio ci src/main.cpp --board=esp32doit-devkit-v1
+      - run: platformio ci src/thermo.cpp --board=esp32doit-devkit-v1
