--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,6 @@ jobs:
       - image: suculent/platformio-docker-build
     steps:
       - checkout
-      - run: platformio lib -g install 1 # OneWire
       - run: platformio lib -g install 251 # VirtualWire
       - run: platformio lib -g install 38 # LowPower
-      - run: platformio ci src/thermo.cpp --board=esp32doit-devkit-v1
+      - run: platformio ci src/thermo.cpp --board=esp32doit-devkit-v1 --verbose
