--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,6 @@ lib_deps =
   VirtualWire
   Low-Power
   OneWireNoResistor
+  
+; evaluate C/C++ Preprocessor conditional syntax
+lib_ldf_mode = chain+
