--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,8 @@ jobs:
     docker:
       - image: suculent/platformio-docker-build
     steps:
-      get lib:
-        - wget https://github.com/bigjosh/OneWireNoResistor/archive/master.zip -O /tmp/OneWireNoResistor.zip
-        - unzip /tmp/onewire_source.zip -d $PWD/lib/
+      - run: wget https://github.com/bigjosh/OneWireNoResistor/archive/master.zip -O /tmp/OneWireNoResistor.zip
+      - run: unzip /tmp/OneWireNoResistor.zip -d $PWD/lib/
       - checkout
       - run: platformio lib -g install 251 # VirtualWire
       - run: platformio lib -g install 38 # LowPower
