--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
-lib_ldf_mode = chain+
+lib_ldf_mode = deep
 lib_deps =
   # Using a library name
   VirtualWire
