--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,4 @@ jobs:
       - checkout
       - run: platformio lib -g install 251 # VirtualWire
       - run: platformio lib -g install 38 # LowPower
-      - run: platformio ci src/thermo.cpp --board=pro8MHzatmega328 --lib=lib/OneWireNoResistor
-      
+      - run: platformio ci src/thermo.cpp --board=pro8MHzatmega328 --lib=lib/OneWire
