--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,13 @@ jobs:
     steps:
       - checkout
       - run: 
-          platformio lib -g install 251 # VirtualWire
+          command: platformio lib -g install 251 # VirtualWire
           name: Lib VirtualWire installing
       - run: 
-          platformio lib -g install 38 # LowPower
+          command: platformio lib -g install 38 # LowPower
           name: Lib LowPower installing
       - run: 
-          platformio ci src/thermo.cpp --board=pro8MHzatmega328 --lib=lib/OneWireNoResistor
+          command: platformio ci src/thermo.cpp --board=pro8MHzatmega328 --lib=lib/OneWireNoResistor
           name: Build
 
 workflows:
