--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,10 @@
 platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
+lib_ldf_mode = chain+
+lib_extra_dirs =
+    /lib
+    /include
 lib_deps =
   # Using a library name
   VirtualWire
