--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:miniatmega328]
+[env]
 platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
-lib_ldf_mode = chain+
-lib_extra_dirs =
-    /lib
-    /include
 lib_deps =
   # Using a library name
   VirtualWire
   Low-Power
+
+[env:RELEASE]
+
+[env:DEBUG]
