--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = RELEASE
+
 [env]
 platform = atmelavr
 board = pro8MHzatmega328
@@ -18,5 +21,7 @@ lib_deps =
   Low-Power
 
 [env:RELEASE]
+build_flags = -D DEBUG=0
 
 [env:DEBUG]
+build_flags = -D DEBUG=1
