--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,8 @@ version: 2
 jobs:
   build-code:
     docker:
-      - image: cimg/base:2024.12
+      - image: petewall/platformio
     steps:
-      - run: curl -fsSL -o get-platformio.py https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py python3 get-platformio.py
-      - run: wget -O get-platformio.py https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py python3 get-platformio.py
       - checkout
       - run:
           command: pio pkg update
@@ -30,5 +28,3 @@ workflows:
     jobs:
     - build-code
   version: 2
-  
-      
