Modification du code pour connecter un écran

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,10 @@ board = pro8MHzatmega328
 framework = arduino
 lib_deps =
   # Using a library name
-  VirtualWire
   Low-Power
+  adafruit/Adafruit GFX Library@^1.12.0
+  adafruit/Adafruit SSD1306@^2.5.13
+
 
 [env:RELEASE]
 build_flags = -D DEBUG=0
